--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Instafarm</string>
+    <string name="action_settings">Settings</string>
+    <string name="testtext">testtext</string>
 </resources>
