--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,9 @@
         <item>henrysweart@gmail.com</item>
         <item>gracepowell@yahoo.com</item>
     </string-array>
+    <string name="title_activity_login">Sign in</string>
+    <string name="loading">Loading</string>
+    <string name="auth_failed">Authentication failed</string>
+    <string name="Logged_in_as">Logged in as:</string>
+    <string name="or_sign_in_with_google">or sign in with google</string>
 </resources>
