--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,8 @@
 
     <string name="google_status_fmt">Google User: %s</string>
     <string name="exit_app">Press again to exit</string>
+    <string name="addtag">Add Tag</string>
+    <string name="input_content">Add a hashtag (without #)</string>
+    <string name="hashtag_hint">photooftheday</string>
+    <string name="input_prefill" />
 </resources>
