deleted profile tab removed google sign in

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,7 +67,7 @@
     <string name="input_content">Add a hashtag (without #)</string>
     <string name="hashtag_hint">photooftheday</string>
     <string name="input_prefill" />
-    <string name="logoutcontent">Do you really want to sign out from your Google Account?</string>
+    <string name="logoutcontent">Log out and leave app?</string>
     <string name="logout">Logout?</string>
     <string name="agree">Yes</string>
     <string name="disagree">No</string>
